--- a/WrapperWithT4Test/WrapperWithT4Test - Backup.csproj
+++ b/WrapperWithT4Test/WrapperWithT4Test - Backup.csproj
@@ -7,24 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="T4Scripts\ElementCreatorHelper.t4" />
-    <None Remove="T4Scripts\Manager.t4" />
-    <None Remove="T4Scripts\WrapperHelper.t4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="T4Scripts\Manager.t4">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="T4Scripts\ElementCreatorHelper.t4">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="T4Scripts\WrapperHelper.t4">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
     <Reference Include="Siemens.Sinumerik.Operate.Services">
       <HintPath>Siemens.Sinumerik.Operate.Services.dll</HintPath>
     </Reference>
@@ -34,13 +16,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="WrapperGenerator.tt">
-      <LastGenOutput>WrapperGenerator.cs</LastGenOutput>
+    <None Update="TextTemplate2.tt">
+      <LastGenOutput>TextTemplate.cs</LastGenOutput>
       <Generator>TextTemplatingFileGenerator</Generator>
     </None>
     <None Update="TextTemplate.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>TextTemplate2.cs</LastGenOutput>
+      <LastGenOutput>TextTemplate.cs</LastGenOutput>
     </None>
   </ItemGroup>
 
@@ -49,10 +31,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="WrapperGenerator.cs">
+    <Compile Update="TextTemplate.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>WrapperGenerator.tt</DependentUpon>
+      <DependentUpon>TextTemplate.tt</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
